--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     margin: 20px;
     text-align: center;
 }
+/*posts page styling*/
 .posts{
     border-radius: 5px;
     border: 1px solid grey;
@@ -12,4 +13,17 @@ body{
     border-radius: 5px;
     border: 1px solid grey;
 
+}
+.header{
+    border: 1px solid rgb(125, 125, 247);
+    margin: 0;
+    height: 50px;
+    padding: 10px ;
+}
+.header h1{
+    text-align: center;
+}
+.loginButton{
+    margin: 5px 0 5px;
+    float: right;
 }
